# advent-of-code

./: .gitignore  generate.sh
2023/01/cpp/: Makefile
2023/01/haskell/: haskell.cabal
2023/01/rust/: Cargo.toml
2023/01/ts/: index.js  index.ts  package.json  read-input.ts
2023/02/cpp/: Makefile
2023/02/haskell/: haskell.cabal
2023/02/rust/: Cargo.toml
2023/02/ts/: index.js  index.ts  package.json  time.txt
2023/03/cpp/: .gitignore  Makefile
2023/03/haskell/: haskell.cabal
2023/03/rust/: Cargo.toml
2023/03/ts/: package.json
2023/04/cpp/: Makefile
2023/04/haskell/: haskell.cabal
2023/04/rust/: Cargo.toml
2023/04/ts/: package.json
2023/05/cpp/: Makefile
2023/05/haskell/: haskell.cabal
2023/05/rust/: Cargo.toml
2023/05/ts/: package.json
2023/06/cpp/: Makefile
2023/06/haskell/: haskell.cabal
2023/06/rust/: Cargo.toml
2023/06/ts/: package.json
2023/07/cpp/: Makefile
2023/07/haskell/: haskell.cabal
2023/07/rust/: Cargo.toml
2023/07/ts/: package.json
2023/08/cpp/: Makefile
2023/08/haskell/: haskell.cabal
2023/08/rust/: Cargo.toml
2023/08/ts/: package.json
2023/09/cpp/: Makefile
2023/09/haskell/: haskell.cabal
2023/09/rust/: Cargo.toml
2023/09/ts/: package.json
2023/10/cpp/: Makefile
2023/10/haskell/: haskell.cabal
2023/10/rust/: Cargo.toml
2023/10/ts/: package.json
2023/11/cpp/: Makefile
2023/11/haskell/: haskell.cabal
2023/11/rust/: Cargo.toml
2023/20/haskell/: haskell.cabal
base/cpp/: Makefile
base/haskell/: haskell.cabal
base/rust/: Cargo.toml
base/ts/: package.json
(+61 files in other folders)
