cabal-version:      2.4
name:               aoc-year2023-day20
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Maximilian Gaedig
maintainer:         mg@maximiliangaedig.com

executable aoc-year2023-day20
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules:
      TakeInput

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,

    hs-source-dirs:   app
    default-language: Haskell2010
